--- a/CameraML/app/build.gradle
+++ b/CameraML/app/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-ml-vision:19.0.3'
     implementation 'com.google.firebase:firebase-ml-vision-face-model:17.0.2'
+
+    implementation 'com.nbsp:library:1.8'
 }
 apply plugin: 'com.google.gms.google-services'
 com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
