--- a/CameraML/build.gradle
+++ b/CameraML/build.gradle
@@ -4,6 +4,9 @@ buildscript {
     repositories {
         google()
         jcenter()
+
+
+
         
     }
     dependencies {
@@ -19,6 +22,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+
+        maven {
+            url  "http://dl.bintray.com/lukaville/maven"
+        }
         
     }
 }
